--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.5.26"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.57.0"
   }
 }
